--- a/index.html
+++ b/index.html
@@ -210,21 +210,22 @@
                                     <li>A simple social media app that allows users to post interesting events that happened in their lives.</li>
 					<li>Implemented like button,delete button, Pagination and Validation. </li>
 					<li> Frontend is styled using Material-Ui for user friendly interface </li>
-					<li> Tech Stack Used: React,Redux,Node,Express,Mongodb </li>
+					<li> Tech Stack Used: React,Node </li>
                                 </div>
                             </div>
 
                             <div class="py-4">
                                 <div class="desc">
-                                    <h4>Video Rental Application Backend</h4>  
-					<p><a target="_blank" href="https://github.com/Amisha-here/video-rental-app-backend">Github Link</a></p>
+                                    <h4>User Authentication system</h4>  
+					<p><a target="_blank" href="https://github.com/Harryydv26/authentication-system">Github Link</a></p>
                                 </div>
                                
                                 <div>
-                                    <li>A video rental service where you can sell/purchase movies.</li>
-					<li>Complete CRUD application</li>
+                                    <li>A fully-functional user authentication system where user can register,login,logout and reset password .</li>
+					<li>Other features like for reset-password i have used sendgrid api which helps in recovering password</li>
 					<li> Implemented Authorization and Validation. </li>
-                                    <li>Tech Stack Used: NodeJS, Express.js and MongoDB.</li>
+                                    <li>Can provide reset- password service for 500 users in one day</li>
+                                    <li> Tech Stack Used: React,Node,Express,Mongodb </li>
                                 </div>
                             </div>
 
@@ -246,7 +247,7 @@
                                 </div>
                                 <div>
                                     <li>3 star at <a target="_blank" href="https://www.codechef.com/users/harryy_om">CodeChef </a> </li>
-                                    <li> max. Rating 1197 at <a target="_blank" href="https://codeforces.com/profile/hariom_26">Codeforces</a></li>
+                                    <li> max. Rating 1263 at <a target="_blank" href="https://codeforces.com/profile/hariom_26">Codeforces</a></li>
                                 </div>
                             </div>
 
